filter combo finished - need to encapsulate to component

--- a/src/components/MyFishList/MyFishList.module.sass
+++ b/src/components/MyFishList/MyFishList.module.sass
@@ -3,6 +3,9 @@
     max-width: 1300px
     margin: 0 auto
 
+.sectionWrapper
+    @include wrap
+    
 .sectionHeader
     @include wrap
     padding: 1rem 0 3rem
