--- a/src/components/GradeStars/GradeStars.module.sass
+++ b/src/components/GradeStars/GradeStars.module.sass
@@ -1,30 +1,46 @@
 .gradeBox
+    position: relative
+    width: 100%
+    max-width: 400px
     display: flex
     flex-wrap: wrap
     justify-content: center
     align-items: center
+    overflow: hidden
 
 .gradeInfo
     width: 100%
-    margin-top: 1rem
+    margin-top: 5px
     font-size: .8rem
     color: grey
     font-style: italic
     text-align: center
 
 .gradeElement
+    position: relative
     width: 40px
     height: 40px
-    margin: 0 10px
-    background: grey
-    border-radius: 50%
-    clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%)
+    margin: 5px 7px
+    padding: 30px
+    background: none
+    border: none
     cursor: pointer
-
+    &::after
+        content: ''
+        position: absolute
+        top: 50%
+        left: 50%
+        transform: translate(-50%, -50%)
+        width: 50px
+        height: 50px
+        border-radius: 50%
+        background: grey
+        clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%)
 
 .gradeElementLight
     @extend .gradeElement
-    background-color: #f0d227
+    &::after
+        background-color: #f0d227
 
 .gradeElementNonClick
     @extend .gradeElement
@@ -34,3 +50,4 @@
 .gradeElementLightNonClick
     @extend .gradeElementLight
     cursor: default
+
