--- a/src/components/MyFishCard/MyFishCard.module.sass
+++ b/src/components/MyFishCard/MyFishCard.module.sass
@@ -69,7 +69,7 @@
     align-self: center
     width: 100%
     margin: 20px 0
-    padding: 1rem
+    // padding: 1rem
 
 .btn
     position: absolute
