--- a/src/components/MyFishList/MyFishList.module.sass
+++ b/src/components/MyFishList/MyFishList.module.sass
@@ -3,9 +3,6 @@
     max-width: 1300px
     margin: 0 auto
 
-.sectionWrapper
-    @include wrap
-    
 .sectionHeader
     @include wrap
     padding: 1rem 0 3rem
@@ -22,6 +19,7 @@
     display: flex
     flex-wrap: wrap
     justify-content: space-evenly
+    margin-top: 2rem
 
 
 
