--- a/src/components/SearchBox/SearchBox.module.sass
+++ b/src/components/SearchBox/SearchBox.module.sass
@@ -36,11 +36,28 @@
     color: #ebf3ed
     line-height: 1
     overflow: hidden
+    &::-webkit-inner-spin-button, &::-webkit-outer-spin-button
+        -webkit-appearance: none
+        margin: 0
+        position: relative
     &:focus, &:not(:placeholder-shown)
         outline: none
         box-shadow: inset 0 0 10px #30ca577c
     &:focus ~.label, &:not(:placeholder-shown) ~.label
         transform: scale(.6) translate(-40%, -200%)
+
+.inputElementArea
+    @extend .inputElement
+    min-height: 100px
+    padding-top: 30px
+    &:focus ~.label, &:not(:placeholder-shown) ~.label
+        transform: scale(.6) translate(-40%, 0)
+        top: 5px
+
+.optionSelect
+    color: #ebf3ed
+    background-color: #1f2b22
+
 
 .label
     position: absolute
