--- a/src/components/Form/Form.module.sass
+++ b/src/components/Form/Form.module.sass
@@ -1,5 +1,7 @@
 .flexEnter
     width: 100%
+    &:last-of-type
+        height: 3rem
     
 .wrapper
     position: fixed
@@ -8,6 +10,7 @@
     transform: translate(-50%, -50%)
     z-index: 5
     width: 85%
+    
     height: 98%
     display: flex
     flex-direction: column
@@ -23,6 +26,17 @@
 
 .formWrapper
     width: 100%
+    max-width: 900px
+    display: flex
+    justify-content: space-between
+    flex-wrap: wrap
+    margin-top: 4rem
+
+.message
+    width: 100%
+    margin-top: 1rem
+    color: red
+    text-align: center
 
 .title, .smallHeader
     width: 100%
