--- a/src/components/SearchCombo/SearchCombo.module.sass
+++ b/src/components/SearchCombo/SearchCombo.module.sass
@@ -11,3 +11,25 @@
 
 .flexEnter
     width: 100%
+
+.wrapper
+    display: flex
+    flex-wrap: wrap
+    justify-content: center
+    align-items: center
+    width: 100%
+    margin-bottom: 1rem
+    max-width: 400px
+
+.inputHeader
+    width: 100%
+    margin-left: 5px
+    font-size: 1rem
+    letter-spacing: .05rem
+    font-weight: 400
+    color: #30ca56
+
+@media screen and ( min-width: 768px )
+    .wrapper
+        width: 48%
+        margin-right: 2%
