--- a/src/components/Button/Button.module.sass
+++ b/src/components/Button/Button.module.sass
@@ -1,40 +1,56 @@
+@mixin BefAft
+    content: ''
+    position: absolute
+    top: 50%
+    left: 50%
+    height: 1px
+    background-color: #30ca56
+    
+.defaultBtn, .closeBtn, .roundClearBtn
+    cursor: pointer
+    letter-spacing: .2rem
+    color: #30ca56
+    background: none
+    text-transform: uppercase
+    border: 1px solid #30ca56
+
 .defaultBtn
     position: relative
     margin: 10px auto 0
     padding: 10px 20px
-    color: #30ca56
-    background: none
-    border: 1px solid #30ca56
     border-radius: 5px
-    text-transform: uppercase
-    letter-spacing: .2rem
-    cursor: pointer
-
+    &::before, &::after
+        content: ''
+        position: absolute
+        top: -1px
+        left: -1px
+        width: calc(100% + 2px)
+        height: calc(100% + 2px)
+        border: 1px solid #30ca56
+        border-radius: 5px
+        box-shadow: inset 0 0 12px #30ca56
+        opacity: 0
+        transition: opacity .2s
+    &:hover::before
+        opacity: .8
+        
 .closeBtn
     position: absolute
     top: 1.5rem
     right: 2rem
     width: 2rem
     height: 2rem
-    color: #30ca56
-    background: none
-    border: 1px solid #30ca56
     border-radius: 5px
-    text-transform: uppercase
-    letter-spacing: .2rem
-    cursor: pointer
     &::before, &::after
-        content: ''
-        position: absolute
-        top: 50%
-        left: 50%
+        @include BefAft
         width: 80%
-        height: 1px
-        background-color: #30ca56
     &::before
        transform: translate(-50%, -50%) rotate(45deg) 
     &::after
        transform: translate(-50%, -50%) rotate(-45deg)
+    &:hover::before, &:hover::after
+        background-color: #a3e9b4
+        
 
 .roundClearBtn
     position: absolute
@@ -43,23 +59,17 @@
     transform: translate(0, -50%)
     width: 2rem
     height: 2rem
-    background: none
-    border: 1px solid #30ca56
     border-radius: 50%
-    cursor: pointer
     animation: moveOn .5s
     &::before, &::after
-        content: ''
-        position: absolute
-        top: 50%
-        left: 50%
+        @include BefAft
         width: 60%
-        height: 1px
-        background-color: #30ca56
     &::before
        transform: translate(-50%, -50%) rotate(45deg) 
     &::after
-       transform: translate(-50%, -50%) rotate(-45deg) 
+       transform: translate(-50%, -50%) rotate(-45deg)
+    &:hover::before, &:hover::after
+        background-color: #a3e9b4
         
         
 @keyframes moveOn
