--- a/src/components/Header/Header.module.sass
+++ b/src/components/Header/Header.module.sass
@@ -1,8 +1,8 @@
 .header
     position: relative
-    z-index: 0
+    z-index: 1
     width: 100vw
-    height: 60vh
+    height: 100vh
     background-image: url('../../assets/images/fishing-1572408_640.jpg')
     background-repeat: no-repeat
     background-size: cover
@@ -15,6 +15,11 @@
         width: 100%
         height: 100%
         background-color: #000000b2
+
+
+.batonik
+    position: relative
+    z-index: 1
 
 @media screen and ( min-width: 768px )
     .header
