--- a/src/components/Header/Nav.module.sass
+++ b/src/components/Header/Nav.module.sass
@@ -1,18 +1,58 @@
 .nav
-    position: relative
-    z-index: 1
-    padding: 10px 0
+    position: fixed
+    width: 100%
+    height: calc(100vh + 60px)
+    z-index: 2
+    background-color: #000000ee
+    transform: translateY(-100%)
+    transition: transform .3s
+
+.navExpand
+    @extend .nav
+    transform: translateY(-60px)
+
+.wrapperBtns
+    position: fixed
+    z-index: 3
+    top: 0
+    left: 50%
+    transform: translateX(-50%)
+    width: 95%
+    max-width: 1300px
+    height: 60px
+    display: flex
+    justify-content: flex-end
+    align-items: flex-start
+
+.buttonsBox
+    background-color: #00000099
+    height: 60px
+    width: 130px
+    display: flex
+    justify-content: space-between
+    align-items: center
+    padding: 1rem
+    border-radius: 0 0 10px 10px
 
 .wrapper
     display: flex
-    align-items: center
+    justify-content: flex-end
     width: 95%
+    height: 100%
     max-width: 1300px
     margin: 0 auto
 
+.list
+    width: 100%
+    display: flex
+    flex-direction: column
+    align-items: flex-end
+    padding-top: 15rem
+    padding-right: 4rem
+
 .listElement
     list-style: none
-    display: inline
+    margin-bottom: 3rem
 
 .link
     color: #ebf3ed
@@ -20,35 +60,42 @@
     font-weight: 700
     letter-spacing: .1rem
     text-decoration: none
+    &:hover
+        color: #a3e9b4
 
 .activeLink
     color: #30ca56
 
-.addBtn
-    position: relative
-    width: 2.5rem
-    height: 2.5rem
-    margin-right: auto
-    border: 2px solid #ebf3ed
-    border-radius: 50%
-    background: none
-    cursor: pointer
-    &::after
-        content: '+'
-        position: absolute
-        left: 0
-        top: 0
-        width: 100%
-        height: 100%
-        color: #ebf3ed
-        font-family: 'Raleway', sans-serif
-        font-size: 3.5em
-        font-weight: 200
-        line-height: 0
-        transform: translateY(50%)
-    &:hover
-        border: 2px solid #30ca56
-        &::after
-            color: #30ca56
 
+
+.icon
+    margin-left: 1rem
+    margin-right: 10px
+    cursor: pointer
+    &:hover
+        color: #a3e9b4
+
+
+@media screen and ( min-width: 567px )
+    .wrapperBtns
+        display: none
+
+    .nav
+        height: 60px
+        transform: translateY(0)
+
+    .list
+        flex-direction: row
+        justify-content: flex-end
+        align-items: center
+        padding-top: 0
+        padding-right: 0
+
+    .listElement
+        margin-bottom: 0
+
+    .wrapper
+        align-items: center
+    .icon
+        margin-right: 0
 
