--- a/src/components/ModalCard/ModalCard.module.sass
+++ b/src/components/ModalCard/ModalCard.module.sass
@@ -1,5 +1,5 @@
 .wrapper
-    position: fixed
+    position: absolute
     top: 50%
     left: 50%
     transform: translate(-50%, -50%)
@@ -18,8 +18,19 @@
     box-shadow: 0 5px 30px -10px #000000
     overflow-y: auto
 
-.infoBox
-    align-self: center
-    width: 100%
-    margin: 20px 0
+.screen
+    position: fixed
+    z-index: 5
+    top: 0
+    left: 0
+    width: 100vw
+    height: 100vh
+    background-color: #000000aa
+    animation: appear .3s
 
+@keyframes appear
+    0%
+        opacity: 0
+    100%
+        opacity: 1
+        
