--- a/src/components/Button/Button.module.sass
+++ b/src/components/Button/Button.module.sass
@@ -20,6 +20,7 @@
     padding: 10px 20px
     border-radius: 5px
     &::before, &::after
+        opacity: 0
         content: ''
         position: absolute
         top: -1px
@@ -28,10 +29,12 @@
         height: calc(100% + 2px)
         border: 1px solid #30ca56
         border-radius: 5px
-        box-shadow: inset 0 0 12px #30ca56
-        opacity: 0
         transition: opacity .2s
-    &:hover::before
+    &::before
+        box-shadow: inset 0 0 12px #30ca56
+    &::after
+        box-shadow: -3px 3px 30px -8px #000000
+    &:hover::before, &:hover::after
         opacity: .8
         
 .closeBtn
