inputs fixed, card design changed

--- a/src/components/Button/Button.module.sass
+++ b/src/components/Button/Button.module.sass
@@ -33,7 +33,8 @@
     &::before
         box-shadow: inset 0 0 12px #30ca56
     &::after
-        box-shadow: -3px 3px 30px -8px #000000
+        box-shadow: 6px 6px 12px #00000065, -6px -6px 10px #ffffff0a
+        opacity: 1
     &:hover::before, &:hover::after
         opacity: .8
         
