--- a/src/components/CardItem/CardItem.module.sass
+++ b/src/components/CardItem/CardItem.module.sass
@@ -8,7 +8,8 @@
     margin: 1.5rem 0
     padding: 2.5rem 20px
     border-radius: 10px
-    box-shadow: 0 5px 30px -10px #000000
+    background: linear-gradient(155deg, #00000018, #ffffff04)
+    box-shadow: 15px 15px 34px #0d130f, -15px -15px 34px #202b23
 
 .wrapperNarrow
     flex-direction: column
