--- a/src/components/Header/Nav.module.sass
+++ b/src/components/Header/Nav.module.sass
@@ -6,6 +6,7 @@
     background-color: #000000ee
     transform: translateY(-100%)
     transition: transform .3s
+    box-shadow: 0 5px 22px -22px #ffffffc4
 
 .navExpand
     @extend .nav
@@ -53,6 +54,7 @@
 .listElement
     list-style: none
     margin-bottom: 3rem
+    cursor: pointer
 
 .link
     color: #ebf3ed
@@ -71,7 +73,6 @@
 .icon
     margin-left: 1rem
     margin-right: 10px
-    cursor: pointer
     &:hover
         color: #a3e9b4
 
