--- a/src/components/Header/Title.module.sass
+++ b/src/components/Header/Title.module.sass
@@ -15,6 +15,7 @@
         top: 50%
         transform: translateY(-50%)
         background-color: #30ca56
+        box-shadow: -5px -5px 5px #ffffff28, 5px 5px 10px #000000
 
 
 .title
@@ -24,6 +25,7 @@
     line-height: .7
     text-transform: uppercase
     letter-spacing: .5rem
+    text-shadow: -5px -5px 5px #ffffff28, 5px 5px 10px #000000
     &::first-letter
         color: #30ca56
 
