--- a/src/components/SearchBox/SearchBox.module.sass
+++ b/src/components/SearchBox/SearchBox.module.sass
@@ -34,13 +34,19 @@
     border-bottom: 1px solid #30ca56
     border-radius: 8px 8px 0 0
     color: #ebf3ed
+    box-shadow: inset 5px 5px 4px #00000069, inset -5px -5px 4px #ffffff11
     line-height: 1
     overflow: hidden
+    -webkit-appearance: none
+    -moz-appearance: none
+    &::-ms-expand
+        display: none
     &::-webkit-inner-spin-button, &::-webkit-outer-spin-button
         -webkit-appearance: none
+        -moz-appearance: none
         margin: 0
         position: relative
-    &:focus, &:not(:placeholder-shown)
+    &:focus
         outline: none
         box-shadow: inset 0 0 10px #30ca577c
     &:focus ~.label, &:not(:placeholder-shown) ~.label
