sorters class connected wht state added, removing objects from base added

--- a/src/components/MyFishList/MyFishList.module.sass
+++ b/src/components/MyFishList/MyFishList.module.sass
@@ -21,5 +21,14 @@
     justify-content: space-evenly
     margin-top: 2rem
 
+.welcomeBox
+    display: flex
+    flex-direction: column
+    justify-content: center
+    align-items: center
+    margin: 3rem 0 6rem
 
-
+.welcomeInfo
+    font-weight: 400
+    color: #afb3b0
+    margin-bottom: 1rem
