--- a/src/components/Button/Button.module.sass
+++ b/src/components/Button/Button.module.sass
@@ -37,7 +37,16 @@
         opacity: 1
     &:hover::before, &:hover::after
         opacity: .8
-        
+
+.defaultBtnRed
+    @extend .defaultBtn
+    color: tomato
+    border-color: tomato
+    &::before, &::after
+        border-color: tomato
+    &::before
+        box-shadow: inset 0 0 12px tomato
+
 .closeBtn
     position: absolute
     top: 1.5rem
