--- a/src/components/ModalCard/ModalCard.module.sass
+++ b/src/components/ModalCard/ModalCard.module.sass
@@ -5,6 +5,7 @@
     transform: translate(-50%, -50%)
     z-index: 5
     width: 85%
+    max-width: 1300px
     height: 98%
     display: flex
     flex-direction: column
