--- a/src/components/SortBox/SortBox.module.sass
+++ b/src/components/SortBox/SortBox.module.sass
@@ -42,3 +42,20 @@
 
 .sortTxt
     color: #afb3b0
+
+
+
+.iconUpActive, 
+    @extend .iconUp
+    &::after
+        border-color: #30ca56
+        border-right: 10px solid transparent
+        border-left: 10px solid transparent
+
+.iconDownActive
+    @extend .iconDown
+    &::after
+        border-color: #30ca56
+        border-right: 10px solid transparent
+        border-left: 10px solid transparent
+
