search info when empty added

--- a/src/components/Catalog/CatalogList.module.sass
+++ b/src/components/Catalog/CatalogList.module.sass
@@ -19,8 +19,14 @@
     
 .wrapper
     @include wrap
+    min-height: 100vh
     display: flex
     flex-wrap: wrap
     justify-content: space-between
 
+.welcomeInfo
+    font-weight: 400
+    color: #afb3b0
+    margin-bottom: 1rem
+    text-align: center
  
