--- a/src/components/MyFishList/MyFishList.module.sass
+++ b/src/components/MyFishList/MyFishList.module.sass
@@ -16,17 +16,11 @@
     
 .listWrapper
     @include wrap
+    min-height: 100vh
     display: flex
     flex-wrap: wrap
     justify-content: space-evenly
     margin-top: 2rem
-
-.welcomeBox
-    display: flex
-    flex-direction: column
-    justify-content: center
-    align-items: center
-    margin: 3rem 0 6rem
 
 .welcomeInfo
     font-weight: 400
