--- a/src/components/Header/Title.module.sass
+++ b/src/components/Header/Title.module.sass
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Cute+Font&display=swap')
+// @import url('https://fonts.googleapis.com/css2?family=Cute+Font&display=swap')
     
 .box
     position: absolute
