--- a/src/views/Root/Root.css
+++ b/src/views/Root/Root.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@200;400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cute+Font&family=Raleway:wght@400;700&display=swap');
+
 
 
 :root {
